--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1597,7 +1597,7 @@
 		background: #f2f2f2;
 	}
 
-		#footer .copyright {
+		#footer .author {
 			color: #bfbfbf;
 			font-size: 0.9em;
 			margin: 0 0 2em 0;
